# ifsgen

./: .gitignore  README.md  dev.ipynb  pyproject.toml
data/visualizations/: chaos_game_demo.html  chaos_game_highres.html
ifsgen/: engine.py  types.py
ifsgen/viz/: R3.py  __init__.py  minimal.py  theme.py
notebook/: anim_trig.ipynb  dev.ipynb  gendev.ipynb  midpoint_test.ipynb  newpoint_abstraction.ipynb  random_dev.ipynb  sierpinski_min.ipynb
old/: fractals.py  generator.py  midpoint.py  runner.py
script/: 2ds_interpolate.py  2ds_interpolate_anim.py  p2ds_omit_last.py  plot_2d_sierpinski.py
