[tool.poetry]
name = "ifsgen"
version = "0.1.0"
description = "generative iterated function systems"
authors = ["Hart Traveller <24962209+harttraveller@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
pydantic = "^2.9.2"
tqdm = "^4.66.5"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
